--- a/styles.css
+++ b/styles.css
@@ -31,15 +31,21 @@ body{
     grid-template-columns: 50% 50%;
 }
 
-.container__botao {
+.container_botao {
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
 }
 
 .botao_secundario{
     background-color: transparent;
     border: 2px solid var(--branco-principal)
+}
+
+.container_aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
 }
