--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ body{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
 .conteiner{
@@ -38,6 +40,7 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 
 .botao_secundario{
@@ -48,4 +51,12 @@ body{
 .container_aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
+}
+
+.container_imagem {
+    margin: 1em 0 2em 0;
+}
+
+.conteiner_caixa{
+    margin: 0 6em;
 }
