--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,11 @@ body{
     margin: 1em 0 2em 0;
 }
 
+.container_titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
+
 .conteiner_caixa{
     margin: 0 6em;
 }
