--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,21 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
-    --fonte-principal: 'inter';
+    --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body{
+body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
 .principal {
@@ -27,7 +28,7 @@ body{
     text-align: center;
 }
 
-.conteiner{
+.container {
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -43,7 +44,7 @@ body{
     margin-bottom: 1em;
 }
 
-.botao_secundario{
+.botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal)
 }
@@ -53,15 +54,15 @@ body{
     color: var(--cinza-secundario);
 }
 
-.container_imagem {
-    margin: 1em 0 2em 0;
-}
-
 .container_titulo {
     font-size: 28px;
     font-weight: 700;
 }
 
-.conteiner_caixa{
+.container_imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container_caixa {
     margin: 0 6em;
 }
