--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     grid-template-columns: 50% 50%;
 }
 
-.container_botao {
+.container__botao {
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
@@ -49,20 +49,20 @@ body {
     border: 2px solid var(--branco-principal)
 }
 
-.container_aviso {
+.container__aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
 }
 
-.container_titulo {
+.container__titulo {
     font-size: 28px;
     font-weight: 700;
 }
 
-.container_imagem {
+.container__imagem {
     margin: 1em 0 2em 0;
 }
 
-.container_caixa {
+.container__caixa {
     margin: 0 6em;
 }
