--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,20 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
-    --fonte-principal: 'Inter';
-    --botao-azul-efeito: #3c92fa;
-}
-
-body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
+    --fonte-principal: 'inter';
 }
 
 * {
     margin: 0;
     padding: 0;
+}
+
+body{
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .principal {
@@ -28,13 +27,13 @@ body {
     text-align: center;
 }
 
-.container {
+.conteiner{
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
 }
 
-.container__botao {
+.container_botao {
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
@@ -44,25 +43,25 @@ body {
     margin-bottom: 1em;
 }
 
-.botao_secundario {
+.botao_secundario{
     background-color: transparent;
     border: 2px solid var(--branco-principal)
 }
 
-.container__aviso {
+.container_aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
 }
 
-.container__titulo {
+.container_imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container_titulo {
     font-size: 28px;
     font-weight: 700;
 }
 
-.container__imagem {
-    margin: 1em 0 2em 0;
-}
-
-.container__caixa {
+.conteiner_caixa{
     margin: 0 6em;
 }
