--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body{
     text-align: center;
 }
 
-.conteiner{
+.container{
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
