--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,25 @@ body{
 .container_descricao{
     padding: 2em;
 }
+
+.dispositivos {
+    text-align: center;
+}
+
+
+.dispositivos_lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.dispositivos_titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista_item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
