--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
 * {
@@ -140,4 +141,17 @@ body{
 .rodape {
     text-align: center;
     margin: 5em 3em;
+}
+
+.lista_link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista_link a:active {
+    color: purple;
+}
+
+.container_botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
